<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="btn_spotifystreamer">SPOTIFY STREAMER </string>
    <string name="btn_scoresapp">SCORES APP</string>
    <string name="btn_libraryapp">LIBRARY APP</string>
    <string name="btn_builditbig">BUILD IT BIG</string>
    <string name="btn_xyzreader">XYZ READER</string>
    <string name="btn_capstone">CAPSTONE:MY OWN APP</string>
    <string name="toast_message">This Button will launch</string>
    <string name="toast_message_exclamation">!</string>



</resources>
