<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/app_bg_color"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Buttonlayout"

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:text="@string/btn_scoresapp"
            android:id="@+id/btnscores"
            android:layout_marginTop="20dp"
            android:background="@color/btn_bg_color"
            android:layout_below="@+id/btnspotifysteamer"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"/>

        <Button
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:text="@string/btn_libraryapp"
            android:id="@+id/btnlibrary"
            android:layout_marginTop="20dp"
            android:background="@color/btn_bg_color"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnscores"
            android:onClick="onClick"
          />



        <Button
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:text="@string/btn_builditbig"
            android:background="@color/btn_bg_color"
            android:layout_marginTop="20dp"
            android:id="@+id/btnbuilditbig"
            android:layout_below="@+id/btnlibrary"

            android:layout_centerHorizontal="true"
            android:onClick="onClick"/>

        <Button
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:text="@string/btn_xyzreader"
            android:id="@+id/btnxyzreader"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/btnbuilditbig"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@color/btn_bg_color"
            android:onClick="onClick"/>

        <Button
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:text="@string/btn_capstone"
            android:id="@+id/btncapstone"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"

            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnxyzreader"
            android:background="@color/btn_capstone_bg_color"
            android:onClick="onClick"/>

        <Button
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:text="@string/btn_spotifystreamer"
            android:id="@+id/btnspotifysteamer"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/txttile"
            android:layout_centerHorizontal="true"
            android:background="@color/btn_bg_color"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/app_title"
            android:id="@+id/txttile"
            android:textColor="@color/txt_title_bg_color"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>
